--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,12 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="/__/firebase/8.7.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 </body>
 </html>
